# ChatUI

./: .chatignore  .gitignore  CLI.md  main.py  pyproject.toml
nimui/: chat_manager.py  cli.py  coder.py  embedding_provider.py  impact.py  model_manager.py  models.json  planner.py  repo_scanner.py  retriever.py  vector_store.py  workspace_provider.py
tmp/: test_integrity.py
